fix: align and margin scramble

--- a/src/features/scramble/ui/Scramble.module.scss
+++ b/src/features/scramble/ui/Scramble.module.scss
@@ -1,4 +1,6 @@
 .scramble {
   font-size: 32px;
   font-weight: 600;
+  text-align: center;
+  margin: 0 24px;
 }
